# vizno

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: main.yml
cli/: index.html
docs/: cli.md  index.md  renderers.md  rendering.md
docs/examples/: code.html  demo.html  mathjax.html  pygal.html  table.html
examples/: altair.html  altair_widget.py  api.py  basic.html  basic.py  bokeh.html  bokeh_widget.py  demo.py  demo_magic.html  demo_magic.py  latex.html  layout.html  layout.py  matplotlib.html  matplotlib_widget.py  plotly.html  table_widget.py
examples/api/: api.py
examples/custom_renderer/: custom_renderer.py  my_renderer.js
examples/renderers/: altair.html  bokeh.html  bokeh.py  code.html  code.py  latex.html  latex.py  mathjax.html  mathjax.py  matplotlib.html  plotly.html  plotly.py  pygal.html  pygal.py  table.html
examples/reports/: altair_widget.py  basic.py  demo.html  demo.py  demo_magic.html  demo_magic.py  layout.html  layout.py  matplotlib_widget.py  table_widget.py
renderers/: index.html
rendering/: index.html
scripts/: bundle.sh  lint-apply.sh  lint.sh
search/: search_index.json
stylesheets/: extra.css
tests/: test_api.py  test_cli.py  test_decorators.py  test_examples.py  test_magic.py  test_renderers.py  test_report.py
tests/testdata/: report.py
vizno/: api.py  cli.py  magic.py  report.py  server.py  utils.py
vizno/js/: elements.js  hooks.js  index.html  renderers.js  vizno-core.js  vizno-core.min.js  vizno.css
vizno/renderers/: __init__.py  altair.py  bokeh.py  code.py  latex.py  mathjax.py  matplotlib.py  plotly.py  pygal.py  svg.py  table.py
vizno/statics/: index.html  vizno-core.min.js  vizno.css
vyz/: api.py  cli.py  magic.py  report.py  utils.py
vyz/js/: index.html  vyz-core.js  vyz.css
vyz/renderers/: __init__.py  altair.py  base.py  bokeh.py  matplotlib.py  table.py  text.py
