[metadata]
name = vyz
version = 0.1
description = Visual layout for python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    typer
    pydantic

[options.extras_require]
tensorflow =
    tensorflow
    grpcio
spacy = spacy~=2.2

[options.packages.find]
where = .
exclude =
    tests

[options.package_data]
vyz = py.typed

[tool:pytest]
addopts =
    --strict
    --verbose
    --tb=native
    -vv
    --failed-first
    --disable-warnings
    --durations 10
    --color=yes
    tests

[flake8]
max-line-length = 88
extend-ignore = E741,W605,B011,E203
exclude = .vulture.py,build,lib

[coverage:run]
source = vyz

[coverage:report]
fail_under = 90
precision = 2

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy
